--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <!-- Primary Meta Tags -->
+    <title>ClockHacks 2 - A hackathon for time</title>
+    <meta name="title" content="ClockHacks 2 - A hackathon for time" />
+    <meta name="description" content="From November 3-5, 2023, join ClockHacks for one of the largest global virtual high school hackathons in the world. Work in teams of 4 to build amazing projects, meet new people, and innovate around the theme of time." />
+    <link rel="icon" type="image/x-icon" href="/clockhacks.png">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://clockhacks.dev/" />
+    <meta property="og:title" content="ClockHacks 2 - A hackathon for time" />
+    <meta property="og:description" content="From November 3-5, 2023, join ClockHacks for one of the largest global virtual high school hackathons in the world. Work in teams of 4 to build amazing projects, meet new people, and innovate around the theme of time." />
+    <meta property="og:image" content="/logo_cropped-transformed.jpeg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://clockhacks.dev/" />
+    <meta property="twitter:title" content="ClockHacks 2 - A hackathon for time" />
+    <meta property="twitter:description" content="From November 3-5, 2023, join ClockHacks for one of the largest global virtual high school hackathons in the world. Work in teams of 4 to build amazing projects, meet new people, and innovate around the theme of time." />
+    <meta property="twitter:image" content="/logo_cropped-transformed.jpeg" />
   </head>
   <body>
     <div id="root"></div>
