--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <!-- Primary Meta Tags -->
     <title>ClockHacks 2 - A hackathon for time</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="title" content="ClockHacks 2 - A hackathon for time" />
     <meta name="description" content="From November 3-5, 2023, join ClockHacks for one of the largest global virtual high school hackathons in the world. Work in teams of 4 to build amazing projects, meet new people, and innovate around the theme of time." />
     <link rel="icon" type="image/x-icon" href="/clockhacks.png">
